# fr8

./: Cargo.toml  README.md  main.rs  package.json  pnpm-lock.yaml
extension/: background.js  manifest.json  popup.html  popup.js
screen recording/: Cargo.toml  index.html  main.rs
screen recording/uploads/: screen-recording.webm
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/routes/: +page.svelte  +upload.svelte  styles.css
src/routes/[meeting]/: +page.svelte
