[package]
name = "screen-recording-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-multipart = "0.7.2"
actix-web = "4"
futures-util = "0.3.31"
sanitize-filename = "0.6.0"
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "screen-recording-backend"
path = "main.rs"
