[package]
name = "screen-recording-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-multipart = "0.7.2"
actix-web = "4.0"  # Make sure you are using a compatible version of actix-web
futures-util = "0.3.31"
sanitize-filename = "0.6.0"
tokio = { version = "1", features = ["full"] }  # Ensure tokio is configured with the full feature set

[[bin]]
name = "screen-recording-backend"
path = "main.rs"
